<resources>
    <string name="app_name">육아일기</string>
    <string name="usericon">userIcon</string>

    <string name="main_menu_all">전체보기</string>
    <string name="main_menu_1">내 주변</string>
    <string name="main_menu_2">비슷한 연령</string>
    <string name="price_text">가격</string>
    <string name="price_unit">원</string>
    <string name="url_text">주소URL/</string>
    <string name="category_text">카테고리</string>
    <string name="recommendation_text">추천</string>
    <string name="follower">팔로워</string>
    <string name="following">팔로잉</string>
    <string name="my_keed_today">오늘 우리아이</string>
    <string name="complete_btn">완료</string>
    <string name="height">키</string>
    <string name="weight">몸무게</string>
    <string name="kg">kg</string>
    <string name="cm">cm</string>
    <string name="head_size_label">머리둘레</string>
    <string name="is_shown">비공개</string>
    <string name="to_wife_label">아내에게 칭찬한마디</string>
    <string name="to_location">위치</string>
    <string name="alim">알림</string>
    <string name="account_setting">계정설정</string>
    <string name="spouser_setting">공동양육자</string>
    <string name="theme_setting">테마</string>
    <string name="resign_btn">탈퇴하기</string>

    <string name="profile_name">계정 (아이 이름, 별명)</string>
    <string name="profile_pass">비밀번호</string>
    <string name="profile_pass_check">비밀번호 확인</string>
    <string name="profile_introduce">소개글</string>

    <string name="resign_title">탈퇴하기</string>
    <string name="resign_info">탈퇴 시, 기록되었던 정보는 모두 삭제됩니다.\n탈퇴하시겠습니까?</string>

    <string name="btn_modi_text">수정</string>
    <string name="btn_delete_text">삭제</string>

    <string name="btn_confirm">확인</string>
    <string name="btn_cancel">취소</string>

    <string name="family_add_hint">초대 할 양육자 휴대폰 번호</string>
    <string name="add_family_btn">전송하기</string>

    <string name="theme_setting_light">Light</string>
    <string name="theme_setting_dark">Dark</string>

    <!-- daily check -->
    <string name="daily_check_edit_text">편집</string>


    <string name="text_left">왼쪽</string>
    <string name="text_right">오른쪽</string>

    <string name="unit_kg">kg</string>
    <string name="unit_cm">cm</string>

    <string name="myFeedToSpouser">남편/아내에게 한마디</string>

    <string name="search_hospital">내 주변 병원 정보를 확인해보세요 !</string>

</resources>