<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".bottomActivity.resign.Resign"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/menu_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <View
            android:id="@+id/dim_layer"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_alignParentBottom="true">
        </View>


        <LinearLayout
            android:id="@+id/menu_layer"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_menu_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingLeft="20sp"
            android:paddingRight="20sp">
            <TextView
                android:id="@+id/alarmBtn"
                style="@style/resignTitle"
                android:text="@string/resign_title"
                />
            <TextView
                android:id="@+id/myAccountBtn"
                style="@style/resignInfo"
                android:text="@string/resign_info"
                />
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="20sp"
                android:paddingBottom="50sp"
                >

                <Button
                    android:id="@+id/doResign"
                    style="@style/redBtn"
                    android:layout_marginStart="104dp"
                    android:text="@string/btn_confirm"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/doCancel"
                    app:layout_constraintVertical_bias="0.0" />

                <Button
                    android:id="@+id/doCancel"
                    style="@style/redBtn"
                    android:layout_marginEnd="108dp"
                    android:text="@string/btn_cancel"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
